<resources>
    <string name="app_name">Fefu</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="exist_account">Уже есть аккаунт?</string>
    <string name="reg">Зарегистрироваться</string>
    <string name="created_students">Созданный студентами</string>
    <string name="welcome_title">Пожалуй, лучший фитнес\nтрекер в ДВФУ</string>
    <string name="welcome_image">welcome image</string>
    <string name="conf">Нажимая на кнопку, вы соглашаетесь с политикой конфиденциальности и пользовательским соглашением</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="other">Другое</string>
    <string name="sex">Пол</string>
    <string name="rep_pass">Повторите пароль</string>
    <string name="pass">Пароль</string>
    <string name="nick">Имя или никнейм</string>
    <string name="login">Логин</string>
    <string name="reg_title">Регистрация</string>
    <string name="login_btn">Войти</string>
    <string name="login_image">login image</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="activity">Активность</string>
    <string name="profile">Профиль</string>
    <string name="change_pass">Изменить пароль</string>
    <string name="save">Сохранить</string>
    <string name="logout">Выйти</string>
    <string name="old_pass">Старый пароль</string>
    <string name="NewPassRep">Новый пароль</string>
    <string name="success">Принять</string>
    <string name="lets_go">Погнали? :)</string>
    <string name="training1">Время потренить</string>
    <string name="training2">Нажимай на кнопку ниже и начинаем\nтрекать активность</string>
</resources>